@@ -1,6 +1,7 @@
 package com.example.demo.domain.board.service.service;
 
 import com.example.demo.domain.board.Repository.*;
+import com.example.demo.domain.board.domain.dto.vo.Tag;
 import com.example.demo.domain.board.domain.entity.Board;
 import com.example.demo.domain.board.domain.entity.BoardCategory;
 import com.example.demo.domain.board.domain.entity.Category;
@@ -13,6 +14,7 @@ import com.example.demo.domain.user.repository.UserRepository;
 import com.example.demo.global.base.exception.ErrorCode;
 import com.example.demo.global.base.exception.ServiceException;
 import lombok.RequiredArgsConstructor;
+
 import org.springframework.stereotype.Component;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -23,14 +25,11 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 public class BoardCommandService {
     private final BoardRepository boardRepository;
-    private final UserRepository userRepository;
     private final CategoryRepository categoryRepository;
     private final BoardCategoryRepository boardCategoryRepository;
 
     @Transactional
-    public BoardInfoResponse createBoard(Long userId, BoardCreateRequest boardCreateRequest) {
-        User user = validateUser(userId);
-
+    public BoardInfoResponse createBoard(User user, BoardCreateRequest boardCreateRequest) {
         Board board = Board.fromBoardRequest(user,boardCreateRequest);
         board.changeBoardStatus(Status.DRAFT);
 
@@ -60,11 +59,8 @@ public class BoardCommandService {
         Board board = validateBoard(boardUpdateRequest.getId());
         validateUserEqualBoardUser(userId, board);
 
-        updateBoard(board, boardUpdateRequest);
+        updateBoardInfo(board, boardUpdateRequest);
 
-
-        Long viewNum = boardRepository.countViewsByBoardId(boardUpdateRequest.getId());
-        Long likeNum = boardRepository.countLikesByBoardId(boardUpdateRequest.getId());
 
         List<String> categoryNames = board.getBoardCategories().stream()
                 .map(boardCategory -> boardCategory.getCategory().getName())
@@ -72,12 +68,12 @@ public class BoardCommandService {
 
         return BoardInfoResponse.from(board,
                 board.getUser().getNickname(),
-                viewNum,
-                likeNum,
+                boardRepository.countViewsByBoardId(boardUpdateRequest.getId()),
+                boardRepository.countLikesByBoardId(boardUpdateRequest.getId()),
                 categoryNames);
     }
 
-    private void updateBoard(Board board , BoardUpdateRequest boardUpdateRequest) {
+    private void updateBoardInfo(Board board , BoardUpdateRequest boardUpdateRequest) {
         board.changeBoardInfo(boardUpdateRequest);
         board.changeBoardStatus(boardUpdateRequest.getStatus());
         changeBoardCategories(board, boardUpdateRequest.getCategoryName());
@@ -87,18 +83,18 @@ public class BoardCommandService {
         List<BoardCategory> existingBoardCategories = board.getBoardCategories();
         List<String> existingCategoryNames = existingBoardCategories.stream()
                 .map(boardCategory -> boardCategory.getCategory().getName())
-                .collect(Collectors.toList());
+                .toList();
 
         // 삭제할 카테고리 처리
-        existingBoardCategories.stream()
-                .filter(boardCategory -> !newCategoryNames.contains(boardCategory.getCategory().getName()))
-                .forEach(boardCategory -> {
-                    Category category = boardCategory.getCategory();
-                    boardCategory.setAssociateNull();
-                    category.getBoardCategories().remove(boardCategory);
-                    board.getBoardCategories().remove(boardCategory);
-                    boardCategoryRepository.delete(boardCategory);
-                    deleteCategory(category);
+        existingCategoryNames.stream()
+                .filter(categoryName -> !newCategoryNames.contains(categoryName))
+                .forEach(categoryName -> {
+                    Category category = categoryRepository.findByName(categoryName).get();
+                    BoardCategory boardCategory = boardCategoryRepository.findByName(categoryName).get();
+                    if (boardCategoryRepository.countBoardCategoryByCategoryId(category.getId()) == 1) {
+                        board.getBoardCategories().remove(boardCategory);
+                        categoryRepository.delete(category);
+                    }
                 });
 
         // 추가할 카테고리 처리
@@ -109,49 +105,38 @@ public class BoardCommandService {
                 });
     }
 
-    private void deleteCategory(Category category) {
-        if (boardCategoryRepository.countBoardCategoryByCategoryId(category.getId()) == 0) {
-            categoryRepository.delete(category);
-        }
-    }
-
     @Transactional
     public void removeBoard(Long userId,Long boardId) {
         Board board = validateBoard(boardId);
         validateUserEqualBoardUser(userId, board);
 
-        List<Category> categories = board.getBoardCategories().stream()
-                .map(BoardCategory::getCategory)
-                .collect(Collectors.toList());
+        List<BoardCategory> existingBoardCategories = board.getBoardCategories();
+        List<String> existingCategoryNames = existingBoardCategories.stream()
+            .map(boardCategory -> boardCategory.getCategory().getName())
+            .toList();
 
-
-        boardRepository.deleteBoardCategoryByBoardId(boardId);
-        boardRepository.deleteViewByBoardId(boardId);
-        boardRepository.deleteFileByBoardId(boardId);
-        boardRepository.deleteLikeByBoardId(boardId);
-
+        // 삭제할 카테고리 처리
+        existingCategoryNames.stream()
+            .forEach(categoryName -> {
+                Category category = categoryRepository.findByName(categoryName).get();
+                BoardCategory boardCategory = boardCategoryRepository.findByName(categoryName).get();
+                if (boardCategoryRepository.countBoardCategoryByCategoryId(category.getId()) == 1) {
+                    board.getBoardCategories().remove(boardCategory);
+                    categoryRepository.delete(category);
+                }
+            });
         boardRepository.delete(board);
-        for (Category category : categories) {
-            deleteCategory(category);
-        }
     }
 
     private Board validateBoard(Long boardId) {
-        Board board = boardRepository.findById(boardId)
+		return boardRepository.findById(boardId)
                 .orElseThrow(() -> new ServiceException(ErrorCode.BOARD_NOT_FOUND));
-        return board;
     }
 
-    private static void validateUserEqualBoardUser(Long userId, Board board) {
+    private void validateUserEqualBoardUser(Long userId, Board board) {
         if(!board.getUser().getId().equals(userId)) {
             throw new ServiceException(ErrorCode.NOT_ACCESS_USER);
         }
-    }
-
-    private User validateUser(Long userId) {
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new ServiceException(ErrorCode.USER_NOT_FOUND));
-        return user;
     }
 
 }
